RESOLVED FIXED32817
[Skia] PlatformContextSkia::beginLayerClippedToImage does not clip outside of the image
https://bugs.webkit.org/show_bug.cgi?id=32817
Summary [Skia] PlatformContextSkia::beginLayerClippedToImage does not clip outside of...
Yuta Kitamura
Reported 2009-12-21 00:43:50 PST
PlatformContextSkia::beginLayerClippedToImage is supposed to limit the current painting window to the bounds of the given image, but it does not. This makes LayoutTests/svg/custom/mask-with-all-units.svg fail in the Chromium layout test. Chromium issue: http://code.google.com/p/chromium/issues/detail?id=29056
Attachments
PlatformContextSkia::beginLayerClippedToImage() needs to clip outside of the image. (1.92 KB, patch)
2009-12-21 01:18 PST, Yuta Kitamura
no flags
Yuta Kitamura
Comment 1 2009-12-21 01:18:15 PST
Created attachment 45314 [details] PlatformContextSkia::beginLayerClippedToImage() needs to clip outside of the image.
WebKit Review Bot
Comment 2 2009-12-21 01:21:49 PST
style-queue ran check-webkit-style on attachment 45314 [details] without any errors.
Adam Langley
Comment 3 2009-12-23 16:26:50 PST
LGTM. (I am not a WebKit reviewer. You need a real review before landing.)
Eric Seidel (no email)
Comment 4 2009-12-23 16:36:49 PST
Comment on attachment 45314 [details] PlatformContextSkia::beginLayerClippedToImage() needs to clip outside of the image. Thank you Adam. LGTM too.
WebKit Commit Bot
Comment 5 2009-12-23 18:23:48 PST
Comment on attachment 45314 [details] PlatformContextSkia::beginLayerClippedToImage() needs to clip outside of the image. Clearing flags on attachment: 45314 Committed r52539: <http://trac.webkit.org/changeset/52539>
WebKit Commit Bot
Comment 6 2009-12-23 18:23:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.