2009-12-23  Yuta Kitamura  <yutak@chromium.org>

Reviewed by Eric Seidel.

        PlatformContextSkia::beginLayerClippedToImage() needs to clip outside of the image.

        This method should limit the current painting window to the bounds of the given
        image, but it did not. Due to this bug, unnecessary contents were rendered in
        some (limited) situations.

        [Skia] PlatformContextSkia::beginLayerClippedToImage does not clip outside of the image
        https://bugs.webkit.org/show_bug.cgi?id=32817

        No new tests, because this is a fix of an existing test which is currently failing in
        Chromium.

        * platform/graphics/skia/PlatformContextSkia.cpp:
        (PlatformContextSkia::beginLayerClippedToImage): Add clipRect() call.


Canonical link: https://commits.webkit.org/43952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52539 268f45cc-cd09-0410-ab3c-d52691b4dbfc